add last changes in package.json'

--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
     "cucumber": "^7.0.0-rc.0",
     "cypress": "^8.7.0",
     "cypress-cucumber-preprocessor": "^4.3.0"
-  }
+  },
+  "keywords": [
+    "cypress",
+    "cucumber",
+    "testing"
+  ]
 }
